<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.engi5895.linedown.linedown.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.engi5895.linedown.linedown.MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <!--<ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/candy_coded" />-->

        <SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:iconifiedByDefault="true"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="@dimen/activity_padding"
            android:text="@string/nearbyRestaurants_title"
            android:textSize="@dimen/title_size" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="vertical">

            <!-- icon -->
            <!--<ImageView
                android:id="@+id/restaurant_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:src=""
                />-->

            <!-- name -->
            <TextView
                android:id="@+id/restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignBaseline="@+id/restaurant_waittime"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/col1main"
                android:textSize="18sp"
                android:textColor="@color/bright_foreground_holo_dark"/>

            <!--goes in textview above-->
            <!--android:layout_toRightOf="@+id/restaurant_icon"-->

            <!-- waitTime -->
            <TextView
                android:id="@+id/restaurant_waittime"
                android:layout_width="75dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:layout_marginRight="46dp"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@+id/restaurant_distance"
                android:gravity="center_vertical"
                android:paddingLeft="25dp"
                android:paddingRight="0dp"
                android:text="@string/col2main"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!--android:background="@drawable/rectangle" this line goes in the textview above and below-->

            <!--There will likely be some problem with this as part of the row element-->
            <!--distance-->
            <TextView
                android:id="@+id/restaurant_distance"
                android:layout_width="70dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/col3main"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>


        <ListView
            android:id="@+id/nearbyRestaurantList"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/search_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
